--- a/APP_Core_50/core50_framework.html
+++ b/APP_Core_50/core50_framework.html
@@ -4989,6 +4989,11 @@
                         <p class="hero-description">
                             构建系统化的高管人才评估与发展体系，确保关键岗位的人才储备和继任准备，支撑组织长期发展战略
                         </p>
+                        <div class="dynamic-balance-strategy" style="margin-top: 30px; padding: 20px; background: rgba(221, 37, 37, 0.05); border-radius: 15px; border-left: 4px solid #dd2525;">
+                            <h3 style="color: #dd2525; margin-bottom: 10px; font-size: 1.2rem;">动态平衡策略</h3>
+                            <p style="color: #666; margin: 0; font-size: 1rem;">绑定与购买平衡内外部人才获取</p>
+                            <p style="color: #999; margin: 5px 0 0 0; font-size: 0.9rem; font-style: italic;">Dynamic Balance Strategy - Bind & Buy balance internal and external talent acquisition</p>
+                        </div>
                     </div>
                 </div>
 
@@ -6086,52 +6091,55 @@
             <section id="framework" class="section glass interactive-card">
                 <h2 class="section-title">
                     <span class="section-icon">🔗</span>
-                    5B Systemic Strategy Framework
+                    5B系统性策略框架
                 </h2>
 
-                <p style="font-size: 1.1rem; color: #666; margin-bottom: 40px; text-align: center;">
-                    <strong>5B systematic strategy</strong> addresses talent needs and responds to different talent
-                    challenge scenarios
+                <p style="font-size: 1.1rem; color: #666; margin-bottom: 20px; text-align: center;">
+                    <strong>5B系统性策略</strong>针对人才需求，应对不同人才挑战场景
                 </p>
+                
+                <!-- Dynamic Balance Strategy Translation -->
+                <div class="dynamic-balance-strategy" style="margin-bottom: 40px; padding: 20px; background: rgba(221, 37, 37, 0.05); border-radius: 15px; border-left: 4px solid #dd2525; text-align: center;">
+                    <h3 style="color: #dd2525; margin-bottom: 10px; font-size: 1.2rem;">动态平衡策略</h3>
+                    <p style="color: #666; margin: 0; font-size: 1rem;">绑定与购买平衡内外部人才获取</p>
+                    <p style="color: #999; margin: 5px 0 0 0; font-size: 0.9rem; font-style: italic;">Dynamic Balance Strategy - Bind & Buy balance internal and external talent acquisition</p>
+                </div>
 
                 <!-- Framework Overview -->
                 <div class="framework-overview">
                     <!-- Core Principles -->
                     <div class="framework-principles">
-                        <h3><i class="fas fa-heart"></i> Core Mindset</h3>
+                        <h3><i class="fas fa-heart"></i> 核心理念</h3>
 
                         <div class="principle-item">
                             <div class="principle-icon"><i class="fas fa-users"></i></div>
                             <div>
-                                <strong>Systematic Thinking</strong><br>
-                                <small>5B forms an integrated talent ecosystem, breaking through traditional HR
-                                    silos</small>
+                                <strong>系统性思维</strong><br>
+                                <small>5B构建一体化人才生态系统，打破传统HR孤岛</small>
                             </div>
                         </div>
 
                         <div class="principle-item">
                             <div class="principle-icon"><i class="fas fa-balance-scale"></i></div>
                             <div>
-                                <strong>Dynamic Balance</strong><br>
-                                <small>Each element can exist independently while maintaining synergistic
-                                    development</small>
+                                <strong>动态平衡</strong><br>
+                                <small>各要素既可独立存在，又能保持协同发展</small>
                             </div>
                         </div>
 
                         <div class="principle-item">
                             <div class="principle-icon"><i class="fas fa-chart-line"></i></div>
                             <div>
-                                <strong>Data-Driven</strong><br>
-                                <small>Based on talent analytics for precise decision support and real-time
-                                    optimization</small>
+                                <strong>数据驱动</strong><br>
+                                <small>基于人才分析提供精准决策支持和实时优化</small>
                             </div>
                         </div>
 
                         <div class="principle-item">
                             <div class="principle-icon"><i class="fas fa-rocket"></i></div>
                             <div>
-                                <strong>Agile Adaptation</strong><br>
-                                <small>Adapt to VUCA environment needs, providing diverse solutions</small>
+                                <strong>敏捷适应</strong><br>
+                                <small>适应VUCA环境需求，提供多元化解决方案</small>
                             </div>
                         </div>
                     </div>
@@ -6140,8 +6148,8 @@
                     <div class="framework-cycle">
                         <div class="cycle-center">
                             <div style="font-size: 1.4rem; font-weight: 900; margin-bottom: 5px;">5B</div>
-                            <div style="font-size: 0.9rem; font-weight: 600;">TALENT</div>
-                            <div style="font-size: 0.9rem; font-weight: 600;">CYCLE</div>
+                            <div style="font-size: 0.9rem; font-weight: 600;">人才</div>
+                            <div style="font-size: 0.9rem; font-weight: 600;">循环</div>
                         </div>
 
                         <!-- BIND at top -->
@@ -6183,17 +6191,15 @@
                             <div class="flip-card-front framework-item">
                                 <span class="framework-letter">B</span>
                                 <h3>BIND</h3>
-                                <p>Emotional attachment & retention</p>
+                                <p>情感连接与保留</p>
                             </div>
                             <div class="flip-card-back">
-                                <h4>BIND Strategy</h4>
-                                <p>• EVP & culture alignment<br>• Personalized career paths<br>• Recognition
-                                    programs<br>•
-                                    Work-life balance<br>• Emotional connection building</p>
+                                <h4>BIND 策略</h4>
+                                <p>• 雇主品牌与文化契合<br>• 个性化职业发展路径<br>• 认可激励计划<br>• 工作生活平衡<br>• 情感纽带建设</p>
                                 <div class="progress-container">
                                     <div class="progress-bar" style="width: 78%;"></div>
                                 </div>
-                                <small>78% effectiveness</small>
+                                <small>78% 有效性</small>
                             </div>
                         </div>
                     </div>
@@ -6203,18 +6209,15 @@
                             <div class="flip-card-front framework-item">
                                 <span class="framework-letter">B</span>
                                 <h3>BUY</h3>
-                                <p>Close critical gaps fast</p>
+                                <p>快速填补关键缺口</p>
                             </div>
                             <div class="flip-card-back">
-                                <h4>BUY Strategy</h4>
-                                <p>• Market mapping & intelligence<br>• Competitive offers & packages<br>• Executive
-                                    search
-                                    partnerships<br>• Fast-track hiring processes<br>• Talent acquisition excellence
-                                </p>
+                                <h4>BUY 策略</h4>
+                                <p>• 市场调研与情报分析<br>• 竞争性薪酬包装<br>• 高管猎头合作<br>• 快速招聘流程<br>• 人才获取卓越</p>
                                 <div class="progress-container">
                                     <div class="progress-bar" style="width: 65%;"></div>
                                 </div>
-                                <small>65% effectiveness</small>
+                                <small>65% 有效性</small>
                             </div>
                         </div>
                     </div>
@@ -6224,17 +6227,15 @@
                             <div class="flip-card-front framework-item">
                                 <span class="framework-letter">B</span>
                                 <h3>BUILD</h3>
-                                <p>Long-term capability growth</p>
+                                <p>长期能力培养</p>
                             </div>
                             <div class="flip-card-back">
-                                <h4>BUILD Strategy</h4>
-                                <p>• 70-20-10 development model<br>• Future-skills curricula<br>• Mentoring &
-                                    coaching
-                                    programs<br>• Leadership academies<br>• Succession planning</p>
+                                <h4>BUILD 策略</h4>
+                                <p>• 70-20-10发展模式<br>• 未来技能课程<br>• 导师教练计划<br>• 领导力学院<br>• 继任规划</p>
                                 <div class="progress-container">
                                     <div class="progress-bar" style="width: 85%;"></div>
                                 </div>
-                                <small>85% effectiveness</small>
+                                <small>85% 有效性</small>
                             </div>
                         </div>
                     </div>
@@ -6244,17 +6245,15 @@
                             <div class="flip-card-front framework-item">
                                 <span class="framework-letter">B</span>
                                 <h3>BORROW</h3>
-                                <p>Flexible capability injection</p>
+                                <p>灵活能力注入</p>
                             </div>
                             <div class="flip-card-back">
-                                <h4>BORROW Strategy</h4>
-                                <p>• Gig economy & contractor pools<br>• Strategic alliance partners<br>• Consulting
-                                    expertise access<br>• Interim executive placement<br>• Flexible workforce models
-                                </p>
+                                <h4>BORROW 策略</h4>
+                                <p>• 零工经济与承包商池<br>• 战略联盟伙伴<br>• 咨询专业知识获取<br>• 临时高管安置<br>• 灵活用工模式</p>
                                 <div class="progress-container">
                                     <div class="progress-bar" style="width: 55%;"></div>
                                 </div>
-                                <small>55% effectiveness</small>
+                                <small>55% 有效性</small>
                             </div>
                         </div>
                     </div>
@@ -6264,16 +6263,15 @@
                             <div class="flip-card-front framework-item">
                                 <span class="framework-letter">B</span>
                                 <h3>BOUNCE</h3>
-                                <p>Resilience & contingency</p>
+                                <p>韧性与应急</p>
                             </div>
                             <div class="flip-card-back">
-                                <h4>BOUNCE Strategy</h4>
-                                <p>• Agile organizational design<br>• Crisis talent reserves<br>• Cross-training
-                                    programs<br>• Scenario planning & simulation<br>• Adaptive capacity building</p>
+                                <h4>BOUNCE 策略</h4>
+                                <p>• 敏捷组织设计<br>• 危机人才储备<br>• 交叉培训计划<br>• 情景规划与模拟<br>• 适应能力建设</p>
                                 <div class="progress-container">
                                     <div class="progress-bar" style="width: 72%;"></div>
                                 </div>
-                                <small>72% effectiveness</small>
+                                <small>72% 有效性</small>
                             </div>
                         </div>
                     </div>
@@ -6282,8 +6280,7 @@
                 <!-- Strategy Combinations -->
                 <div class="strategy-combinations">
                     <h3 style="color: #dd2525; margin-bottom: 20px; text-align: center;">
-                        <i class="fas fa-puzzle-piece"></i> 5B Element Collaborative Response & Implementation
-                        Strategy
+                        <i class="fas fa-puzzle-piece"></i> 5B要素协同响应与实施策略
                     </h3>
 
                     <div class="combination-grid">
